influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_group_by-7.snap
---
source: influxdb3/tests/server/query.rs
description: "query: select * from bar group by /t[1]/, chunked: false"
expression: values
---
[
  {
    "results": [
      {
        "series": [
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "a"
            },
            "values": [
              [
                "2065-01-07T17:28:51Z",
                1
              ],
              [
                "2065-01-07T17:28:53Z",
                3
              ]
            ]
          },
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "b"
            },
            "values": [
              [
                "2065-01-07T17:28:52Z",
                2
              ],
              [
                "2065-01-07T17:28:54Z",
                4
              ]
            ]
          }
        ],
        "statement_id": 0
      }
    ]
  }
]
