influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_group_by_with_nulls-2.snap
---
source: influxdb3/tests/server/query.rs
description: "query: select * from bar group by t1, chunked: true"
expression: values
---
[
  {
    "results": [
      {
        "partial": true,
        "series": [
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "a"
            },
            "values": [
              [
                "2065-01-07T17:28:51Z",
                1
              ],
              [
                "2065-01-07T17:28:53Z",
                3
              ]
            ]
          }
        ],
        "statement_id": 0
      }
    ]
  },
  {
    "results": [
      {
        "series": [
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": ""
            },
            "values": [
              [
                "2065-01-07T17:28:52Z",
                2
              ]
            ]
          }
        ],
        "statement_id": 0
      }
    ]
  }
]
