influxdb3/tests/server/snapshots/lib__server__query__api_v3_query_show_tables_ordering.snap
---
source: influxdb3/tests/server/query.rs
expression: output
---
+---------------+--------------------+-------------------------------------+------------+
| table_catalog | table_schema       | table_name                          | table_type |
+---------------+--------------------+-------------------------------------+------------+
| public        | iox                | aaa                                 | BASE TABLE |
| public        | iox                | table_001                           | BASE TABLE |
| public        | iox                | table_002                           | BASE TABLE |
| public        | iox                | table_003                           | BASE TABLE |
| public        | iox                | table_006                           | BASE TABLE |
| public        | iox                | table_009                           | BASE TABLE |
| public        | iox                | xxx                                 | BASE TABLE |
| public        | system             | distinct_caches                     | BASE TABLE |
| public        | system             | influxdb_schema                     | BASE TABLE |
| public        | system             | last_caches                         | BASE TABLE |
| public        | system             | parquet_files                       | BASE TABLE |
| public        | system             | processing_engine_logs              | VIEW       |
| public        | system             | processing_engine_trigger_arguments | BASE TABLE |
| public        | system             | processing_engine_triggers          | BASE TABLE |
| public        | system             | queries                             | BASE TABLE |
| public        | information_schema | tables                              | VIEW       |
| public        | information_schema | views                               | VIEW       |
| public        | information_schema | columns                             | VIEW       |
| public        | information_schema | df_settings                         | VIEW       |
| public        | information_schema | schemata                            | VIEW       |
| public        | information_schema | routines                            | VIEW       |
| public        | information_schema | parameters                          | VIEW       |
+---------------+--------------------+-------------------------------------+------------+
